<resources>
    <string name="app_name">Math Test</string>
    <string name="search_image">Seach Image</string>
    <string name="load_more">load more...</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember_me">remember me</string>
    <string name="not_a_user_register_here">Not a user? Register here</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_details">user_details</string>
    <string name="browse_contacts">Browse Contacts</string>
    <string name="browse">Browse</string>
    <string name="enter_contact_information">Enter contact information</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="start_test">Start test</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="question_question_number"><![CDATA[Question <question number>]]></string>
    <string name="timer_time"><![CDATA[Timer: <Time>]]></string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="more">more</string>
    <string name="previous_question">Previous question</string>
    <string name="next_question">Next question</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="end_test">End Test</string>
    <string name="loading_test_questions">Loading Test Questions...</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_past_tests">View Past Tests</string>
    <string name="username">Username</string>
    <string name="view_users">View Users</string>
    <string name="score">Score:</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="question_question_text"><![CDATA[Question <Question text>]]></string>
    <string name="edit_user">Edit User</string>
    <string name="delete_user">Delete User</string>
    <string name="user_data">User Data</string>
    <string name="send_email">Send Email</string>
    <string name="view_tests">View tests</string>
    <string name="new_password">New password</string>
    <string name="add_student">Add Student</string>
    <string name="contacts">Contacts</string>
</resources>