<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/userDashBoardFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" />

    <Button
        android:id="@+id/startTestButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_weight="0"
        android:text="@string/start_test"
        />

    <Button
        android:visibility="gone"
        android:id="@+id/addUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/add_student" />

    <Button
        android:visibility="gone"
        android:id="@+id/sendEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/send_email" />

    <Button
        android:visibility="gone"
        android:id="@+id/viewUsers"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/view_users" />

    <Button
        android:id="@+id/viewTestButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/view_past_tests" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/edit_profile"
        />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/logout" />
</LinearLayout>